--- a/flaskapp/static/style.css
+++ b/flaskapp/static/style.css
@@ -1,74 +1,102 @@
-/* General body styles */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    padding: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #0d0d0d;
+    color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-/* Center the container */
 .container {
-    width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 95vw;
+    max-width: 400px;
+    background-color: #1a1a1a;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 2px 15px rgba(245, 242, 243, 0.5);
+    border-color: white;
 }
 
-/* Form wrapper */
+.form-wrapper {
+    padding: 20px;
+}
+
 .form-wrapper h2 {
     text-align: center;
-    color: #333;
+    color: #ffffff;
     margin-bottom: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
 }
 
-/* Form group for label and input alignment */
 .form-group {
     margin-bottom: 15px;
 }
 
-/* Label styles */
 .form-group label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
+    color: #f0f0f0;
 }
 
-/* Input styles */
 .form-group input {
     width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box; /* Ensure padding doesn't affect width */
+    padding: 12px;
+    border: none;
+    border-radius: 25px;
+    background-color: #262626;
+    color: #f0f0f0;
+    font-size: 16px;
+    box-sizing: border-box;
+    transition: border-color 0.3s ease;
 }
 
-/* Button styles */
+.form-group input:focus {
+    outline: none;
+    border-color: #ffffff;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+}
+
 button {
     width: 100%;
-    padding: 10px;
-    background-color: #5cb85c;
+    padding: 12px;
+    background-color: #3760f4;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 25px;
     cursor: pointer;
     font-size: 16px;
-    margin-top: 10px; /* Add margin for separation */
+    margin-top: 10px;
+    transition: background-color 0.3s, transform 0.3s;
 }
 
 button:hover {
-    background-color: #4cae4c;
+    background-color: #f2f3f6;
+    transform: scale(1.05);
+    color: black;
 }
 
-/* Link styles */
 a {
     display: block;
-    margin-top: 10px;
+    margin-top: 15px;
     text-align: center;
-    color: #5cb85c;
+    color: #3760f4;
     text-decoration: none;
+    list-style: none;
 }
 
 a:hover {
-    text-decoration: underline;
+    color: #275df2;
+}
+
+.error-message {
+    color: #ff6b6b;
+    text-align: center;
+    margin-bottom: 15px;
 }
